# irs-entrega

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: irs.py  main.py
src/irs/: __init__.py  cli.py
src/irs/broker/: degiro.py
src/irs/model/: model.py
src/irs/plus500/: main.py
