[tool.poetry]
name = "irs"
version = "0.1.0"
description = "IRS XML processing tool"
authors = ["SJinxin <3352383+sjinxin@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "irs", from = "src" }]


[tool.poetry.scripts]
irs = "irs.cli:main"

[tool.poetry.dependencies]
python = "^3.11"
lxml = "^6.0.4"
attrs = "^23.2.0"
tabulate = "^0.9.0"
Unidecode = "^1.3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 